Don't lose keyboard focus when going forward to a bfcached page.  Bug 314362, patch by Oliver Yeoh <oliver_yeoh@hotmail.com>, r=bryner, sr=jst